# rapidyaml-python

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: bare.yml  bare.ys  release.yml  release.ys
bm/: bm_parse.py
changelog/: 0.11.1.md  v0.11.0.md
test/: test_ex_read.py  test_ex_write.py
