[project]
name = "rapidyaml"
dynamic = ["version", "dependencies", "optional-dependencies", "license"]
authors = [
  { name="Joao Paulo Magalhaes", email="dev@jpmag.me" },
]
description = "Parse and emit YAML, and do it fast. Python wrapper for the C++ library"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/biojppm/rapidyaml-python"
Issues = "https://github.com/biojppm/rapidyaml-python/issues"

[build-system]
requires = [
         "setuptools>=42",
         "setuptools_scm[toml]>=3.4",
         "setuptools-git",
         "wheel",
         "ninja",
         "cmake_build_extension",
         "swig"
]

[tool.setuptools_scm]
